<?php

class ExtensionController
{
    public function index()
    {
        return Helper::view("Extensions");
    }
}