@startuml
skinparam classAttributeIconSize 0
abstract class "Model" {
    #id: int
    #create()
    #readAll()
    +checkPercent()
    #search()
    #exists()
    +update()
    +delete()
    +save()
    +searchId()
    {abstract} +asHTMLTableRow()
}
class Deck{
    #user_id: int
    #quantity: int
    #card_id: int
    #deck_id: int
    +asHTMLTableRow()
}
class Collection{
    #user_id: int
    #owned: bool
    #quantity: int
    #card_id: int
    +asHTMLTableRow()
    +contains()
    +save()
    +updateQuantity()
    +remove()
    +show()
}
class User{
    +authentification()
}
class AboutController
class AdvancedResearchController
{
    +parseSearchForm()
    +show()
    -check()
    -checkColors()
    -checkColor()
}
class CardController {
    +parseNewCard()
    +controlText()
}

class CollectionController{
    +parseUpdateCard()
    +parseAddCard()
    +parseRemoveCard()
    +show()

}
class DeckController
class ExtensionController
class IndexController
class NewCardController

class UserController {
    +login()
    +logout()
}

Model <|-- Collection
Model <|-- User
Model <|-- Card

